tests/reference/asr-test_logical_compare_01-5db0e2e.stderr
semantic error: Type mismatch: 'str' and 'i32'. Both operands must be of the same type.
 --> tests/errors/test_logical_compare_01.py:2:11
  |
2 |     print("hello" or 10)
  |           ^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
